# warp-transducer

./: CMakeLists.txt  build.sh  warp_transducer_espnet.ipynb
cmake/: hip.cmake
include/: rnnt.h
include/detail/: cpu_rnnt.h  gpu_rnnt.h  gpu_rnnt_kernel.h  hostdevice.h  reduce.h  rnnt_helper.h
pytorch_binding/: README.md  build.sh  setup.py
pytorch_binding/src/: binding.cpp
pytorch_binding/test/: test.py
pytorch_binding/warprnnt_pytorch/: __init__.py
tests/: test.h  test_cpu.cpp
